skins/larry/styles.css
/* ... */
.attachmentslist li a.cancelupload {
	background-position: -6px -378px;
}

/*** fieldset tabs ***/

.tabbed.ui-tabs {
	padding: 0;
	border: 0 !important;
	background: none;
}

.ui-dialog .tabbed.ui-tabs {
	margin: -12px -8px 0 -8px;
}

.boxcontent.tabbed.ui-tabs {
	padding: 10px;
}

.ui-tabs .tabsbar.ui-tabs-nav {
	margin-bottom: 4px;
}

.ui-dialog-content .ui-tabs .tabsbar.ui-tabs-nav {
	margin-bottom: 0;
}

.tabsbar .tablink:last-child {
	background: none;
}

.tabsbar .tablink:last-child a {
	border-right: 0;
}

.ui-tabs .ui-tabs-nav li.tablink a {
	background: #fff;
}

.ui-tabs fieldset.ui-tabs-panel {
	border: 0;
	padding: 0;
	margin-left: 0;
	background: none;
}

.ui-dialog .propform .ui-tabs-panel {
	display: block;
	background: #efefef;
	padding: 0.5em 1em;
}

#image-selector-form.droptarget {
	background: url(images/filedrop.png) center bottom no-repeat;
}

/** Common TinyMCE fixes **/
.mce-btn-small .mce-ico {
	display: inline; /* for old Firefox */
}

.mce-btn-small i {
	line-height: 16px !important;
	vertical-align: text-top !important;
}

_:not(), _:-moz-handler-blocked, .mozilla .mce-btn-small i {
	line-height: 20px !important;
}

.mce-textbox {
	border-radius: 0;
	box-shadow: none;
}

button.mce-close,
.mce-btn button,
.mce-textbox:focus {
	box-shadow: none;
	outline: none;
}

/** PGP Key import dialog **/
.pgpkeyimport div.key {
	position: relative;
	margin-bottom: 2px;
	padding: 1em;
	background-color: #ebebeb;
}

.pgpkeyimport div.key.revoked,
.pgpkeyimport div.key.disabled {
	color: #a0a0a0;
}

.pgpkeyimport div.key label {
	display: inline-block;
	margin-right: 0.5em;
}

.pgpkeyimport div.key label:after {
	content: ":";
}

.pgpkeyimport div.key label + a,
.pgpkeyimport div.key label + span {
	display: inline-block;
	margin-right: 2em;
	white-space: nowrap;
}

.pgpkeyimport div.key label + a {
	font-weight: bold;
}

.pgpkeyimport ul.uids {
	margin: 1em 0 0 0;
	padding: 0;
}

.pgpkeyimport li.uid {
	border: 0;
	padding: 0.3em;
}

.pgpkeyimport div.key button.importkey {
	position: absolute;
	top: 0.8em;
	right: 0.8em;
	padding: 4px 6px;
}

.pgpkeyimport div.key button[disabled] {
	display: none;
}

